<resources>
    <string name="app_name">Feed The fckng Cat!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Feed the Cat</string>
    <string name="nav_header_subtitle">feedcat@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_game">FeedTheCat</string>
    <string name="menu_results">Results</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="options_share">Share</string>

    <string name="text_satiety">Satiety: %1$d</string>
    <string name="text_date">Date: %1$s</string>
    <string name="login_btn">Login</string>
    <string name="registr_btn">Registr</string>
    <string name="helper_text_requied">Requied*</string>
    <string name="name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="name_field_error">Name field is required!</string>
    <string name="password_field_error">Password field is required!</string>
    <string name="registr_error_exists">Such user already exists!</string>
    <string name="login_error">Such user does not exist!</string>
    <string name="text_welcome">Welcome %1$s!</string>
    <string name="btn_play">Play</string>
    <string name="btn_results">Results</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_game_over">Game Over</string>
    <string name="btn_feed1">Fish</string>
    <string name="btn_feed2">Meat</string>
    <string name="btn_feed3">Milk</string>

    <string name="helper_pager_footer">Page %1$d of %2$d</string>

    <!-- Send email -->
    <string name="feedcat_email">feedcat@gmail.com</string>
    <string name="choose_email_client">Choose email client and send message</string>
    <string name="send_mail_error">There are no email clients installed.</string>

    <string name="info_view"><![CDATA[
        <h4>Лаба 1</h4>
        <p>
        Учреждение: бугр <br>
        Группа: №2 <br>
        Предмет: Мобильная разработка <br>
        Разработчик: Доронкин Мехия Николай<br>
        </p>
    ]]></string>

</resources>
