<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    style="@style/NestedScrollBarStyle"
    tools:context="app.com.feedcat.ui.home.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/textWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/layoutResult"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:visibility="gone"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="16dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/cat_food_hearts_icon" />

                    <TextView
                        android:id="@+id/textSatiety"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:gravity="center_horizontal"
                        android:textColor="@color/textColorLight"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_horizontal"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_play" />

            <Button
                android:id="@+id/btnResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_results" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_logout" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/textError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorDark"
                android:textSize="16sp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textColorDark"
                app:counterEnabled="true"
                app:counterMaxLength="32"
                app:counterTextColor="@color/textColorRequied"
                app:helperText="@string/helper_text_requied"
                app:helperTextTextColor="@color/textColorRequied">

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="32"
                    android:maxLines="1"
                    android:paddingHorizontal="5dp"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textColorDark"
                app:counterEnabled="true"
                app:counterMaxLength="32"
                app:counterTextColor="@color/textColorRequied"
                app:helperText="@string/helper_text_requied"
                app:helperTextTextColor="@color/textColorRequied">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="32"
                    android:maxLines="1"
                    android:paddingHorizontal="5dp"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/login_btn" />

            <Button
                android:id="@+id/btnRegistr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/registr_btn" />

        </LinearLayout>

    </FrameLayout>

</androidx.core.widget.NestedScrollView>